--- a/Cars/app/src/main/res/values/strings.xml
+++ b/Cars/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="feedback">Feedback</string>
     <string name="name">Name</string>
     <string name="date">Date</string>
+    <string name="submit_feedback">Submit feedback</string>
 </resources>
