--- a/Cars/app/src/main/res/values/strings.xml
+++ b/Cars/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="name">Name</string>
     <string name="date">Date</string>
     <string name="submit_feedback">Submit feedback</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
 </resources>
